# earthminds-personal-ai

./: .env.example  .replit  Dockerfile  deploy-aws-ec2.sh  docker-compose.yml  main.py  main_simple.py  pyproject.toml  replit.md  requirements.txt
.local/state/replit/agent/: .latest.json
.local/state/replit/agent/filesystem/: filesystem_state.json
.streamlit/: config.toml
attached_assets/: Pasted--Business-Intelligence-Platform-successfully-migrated-to-Replit-environment-Recent-changes-compl-1756926006037_1756926006039.txt  Pasted-What-you-ll-get-Best-in-class-inference-Groq-API-free-tier-available-llama-3-1-70b-versatil-1756823538983_1756823538986.txt
bi_core/: __init__.py  anti_hallucination.py  business_workflows.py  enhanced_data_sources.py  graph.py  llm_factory.py  memory_optimizer.py  prompts.py  settings.py  telemetry.py  tools.py
tests/: test_tools.py  test_workflows.py
